--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <dependencies>
 
+        <!-- 包含TCP通信 和protobuf 序列化 和 反序列化-->
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty-shaded</artifactId>
@@ -26,8 +27,17 @@
             <version>1.29.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.python/jython -->
+        <dependency>
+            <groupId>org.python</groupId>
+            <artifactId>jython</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+
+
     </dependencies>
 
+    <!-- 编译 proto文件的编译程序和对应的编译插件-->
     <build>
         <extensions>
             <extension>
